--- a/requirements.txt
+++ b/requirements.txt
@@ -1,321 +1,209 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-abseil-cpp=20211102.0=hd4dd3e8_0
-absl-py=1.4.0=pypi_0
-accelerate=0.28.0=pypi_0
-aiohttp=3.8.3=pypi_0
-aiosignal=1.2.0=pyhd3eb1b0_0
-argcomplete=3.1.6=pypi_0
-ase=3.22.1=pyhd8ed1ab_1
-astor=0.8.1=pypi_0
-async-timeout=4.0.2=pypi_0
-atk-1.0=2.36.0=ha1a6a79_0
-attrs=22.1.0=pypi_0
-beautifulsoup4=4.12.2=pypi_0
-bitsandbytes=0.42.0=pypi_0
-blas=1.0=mkl
-blinker=1.4=pypi_0
-blosc=1.21.3=h6a678d5_0
-boost-cpp=1.73.0=h7f8727e_12
-boto=2.49.0=pypi_0
-bottleneck=1.3.5=pypi_0
-brotli=1.0.9=h5eee18b_7
-brotli-bin=1.0.9=h5eee18b_7
-brotlipy=0.7.0=pypi_0
-brunsli=0.1=h2531618_0
-bzip2=1.0.8=h7b6447c_0
-c-ares=1.19.0=h5eee18b_0
-ca-certificates=2023.08.22=h06a4308_0
-cachetools=4.2.2=pyhd3eb1b0_0
-cairo=1.16.0=hb05425b_5
-captum=0.6.0=pyhd8ed1ab_0
-certifi=2023.7.22=pypi_0
-cffi=1.15.1=pypi_0
-cfitsio=3.470=h5893167_7
-charls=2.2.0=h2531618_0
-charset-normalizer=2.0.4=pyhd3eb1b0_0
-clarabel=0.6.0=pypi_0
-click=8.0.4=pypi_0
-cloudpickle=2.2.1=pypi_0
-cmake=3.27.2=pypi_0
-colorama=0.4.6=pypi_0
-contextlib2=21.6.0=pypi_0
-contourpy=1.0.5=pypi_0
-crcmod=1.7=pypi_0
-cryptography=41.0.2=pypi_0
-cvxpy=1.4.1=pypi_0
-cycler=0.11.0=pyhd3eb1b0_0
-cytoolz=0.12.0=pypi_0
-dask=2023.6.0=pypi_0
-dask-core=2023.6.0=py310h06a4308_0
-ecos=2.0.12=pypi_0
-einops=0.7.0=pypi_0
-expat=2.4.9=h6a678d5_0
-fasteners=0.19=pypi_0
-filelock=3.9.0=pypi_0
-flask=2.2.2=pypi_0
-font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
-font-ttf-inconsolata=2.001=hcb22688_0
-font-ttf-source-code-pro=2.030=hd3eb1b0_0
-font-ttf-ubuntu=0.83=h8b1ccd4_0
-fontconfig=2.14.1=h4c34cd2_2
-fonts-anaconda=1=h8fa9717_0
-fonts-conda-ecosystem=1=hd3eb1b0_0
-fonttools=4.25.0=pyhd3eb1b0_0
-freetype=2.12.1=h4a9f257_0
-fribidi=1.0.10=h7b6447c_0
-frozenlist=1.3.3=pypi_0
-fsspec=2024.3.1=pypi_0
-ftfy=5.8=py_0
-gcs-oauth2-boto-plugin=3.0=pypi_0
-gdk-pixbuf=2.42.10=h5eee18b_0
-gdown=4.7.1=pyhd8ed1ab_0
-giflib=5.2.1=h5eee18b_3
-glib=2.69.1=he621ea3_2
-gmp=6.2.1=h295c915_3
-gmpy2=2.1.2=pypi_0
-gobject-introspection=1.72.0=py310hbb6d50b_2
-google-apitools=0.5.32=pypi_0
-google-auth=2.6.0=pyhd3eb1b0_0
-google-auth-oauthlib=0.5.2=pypi_0
-google-reauth=0.1.1=pypi_0
-graphite2=1.3.14=h295c915_1
-graphviz=2.50.0=h1b29801_1
-grpc-cpp=1.48.2=he1ff14a_1
-grpcio=1.48.2=pypi_0
-gsutil=5.27=pypi_0
-gtk2=2.24.33=h73c1081_2
-gts=0.7.6=hb67d8dd_3
-gym=0.26.2=pypi_0
-gym-notices=0.0.8=pypi_0
-h5py=3.9.0=pypi_0
-harfbuzz=4.3.0=hf52aaf7_1
-hdf5=1.12.1=h2b7332f_3
-httplib2=0.20.4=pypi_0
-huggingface-hub=0.22.1=pypi_0
-huggingface_hub=0.15.1=py310h06a4308_0
-icu=58.2=he6710b0_3
-idna=3.4=pypi_0
-imagecodecs=2021.8.26=pypi_0
-imageio=2.31.1=pypi_0
-importlib-metadata=6.0.0=pypi_0
-intel-openmp=2023.1.0=hdb19cb5_46305
-isodate=0.6.1=pypi_0
-itsdangerous=2.0.1=pyhd3eb1b0_0
-jinja2=3.1.2=pypi_0
-joblib=1.2.0=pypi_0
-jpeg=9e=h5eee18b_1
-json-tricks=3.17.3=pypi_0
-jxrlib=1.1=h7b6447c_2
-kiwisolver=1.4.4=pypi_0
-krb5=1.20.1=h143b758_1
-lazy-loader=0.2=pypi_0
-lazy_loader=0.2=py310h06a4308_0
-lcms2=2.12=h3be6417_0
-ld_impl_linux-64=2.38=h1181459_1
-learn2learn=0.2.0=pypi_0
-lerc=3.0=h295c915_0
-libaec=1.0.4=he6710b0_1
-libboost=1.73.0=h28710b8_12
-libbrotlicommon=1.0.9=h5eee18b_7
-libbrotlidec=1.0.9=h5eee18b_7
-libbrotlienc=1.0.9=h5eee18b_7
-libcurl=8.1.1=h251f7ec_2
-libdeflate=1.17=h5eee18b_0
-libedit=3.1.20221030=h5eee18b_0
-libev=4.33=h7f8727e_1
-libffi=3.4.4=h6a678d5_0
-libgcc-ng=13.1.0=he5830b7_0
-libgd=2.3.3=h6a678d5_2
-libgfortran-ng=11.2.0=h00389a5_1
-libgfortran5=11.2.0=h1234567_1
-libgomp=13.1.0=he5830b7_0
-libiconv=1.16=h7f8727e_2
-libllvm14=14.0.6=hdb19cb5_3
-libnghttp2=1.52.0=h2d74bed_1
-libpng=1.6.39=h5eee18b_0
-libprotobuf=3.20.3=he621ea3_0
-librsvg=2.54.4=h36cc946_3
-libssh2=1.10.0=hdbd6064_2
-libstdcxx-ng=13.1.0=hfd8a6a1_0
-libtiff=4.5.0=h6a678d5_2
-libtool=2.4.6=h6a678d5_1009
-libuuid=1.41.5=h5eee18b_0
-libwebp=1.2.4=h11a3e52_1
-libwebp-base=1.2.4=h5eee18b_1
-libxcb=1.15=h7f8727e_0
-libxml2=2.10.4=hcbfbd50_0
-libzopfli=1.0.3=he6710b0_0
-lit=16.0.6=pypi_0
-littleutils=0.2.2=py_0
-llvmlite=0.40.0=pypi_0
-locket=1.0.0=pypi_0
-lz4-c=1.9.4=h6a678d5_0
-markdown=3.4.1=pypi_0
-markupsafe=2.1.1=pypi_0
-matplotlib=3.7.1=pypi_0
-matplotlib-base=3.7.1=py310h1128e8f_1
-mkl=2023.1.0=h213fc3f_46343
-mkl-fft=1.3.6=pypi_0
-mkl-random=1.2.2=pypi_0
-mkl-service=2.4.0=pypi_0
-mkl_fft=1.3.6=py310h1128e8f_1
-mkl_random=1.2.2=py310h1128e8f_1
-monotonic=1.6=pypi_0
-mpc=1.1.0=h10f8cd9_1
-mpfr=4.0.2=hb69a4c5_1
-mpmath=1.3.0=pypi_0
-multidict=6.0.2=pypi_0
-munch=2.5.0=pyhd3eb1b0_0
-munkres=1.1.4=py_0
-ncurses=6.4=h6a678d5_0
-networkx=3.1=pypi_0
-ninja=1.10.2=h06a4308_5
-ninja-base=1.10.2=hd09550d_5
-nni=2.10.1=pypi_0
-nspr=4.35=h6a678d5_0
-nss=3.89.1=h6a678d5_0
-numba=0.57.1=pypi_0
-numexpr=2.8.4=pypi_0
-numpy=1.24.3=pypi_0
-numpy-base=1.24.3=py310hb5e798b_1
-nvidia-cublas-cu11=11.11.3.6=pypi_0
-nvidia-cublas-cu12=12.1.3.1=pypi_0
-nvidia-cuda-cupti-cu11=11.8.87=pypi_0
-nvidia-cuda-cupti-cu12=12.1.105=pypi_0
-nvidia-cuda-nvrtc-cu11=11.8.89=pypi_0
-nvidia-cuda-nvrtc-cu12=12.1.105=pypi_0
-nvidia-cuda-runtime-cu11=11.8.89=pypi_0
-nvidia-cuda-runtime-cu12=12.1.105=pypi_0
-nvidia-cudnn-cu11=8.7.0.84=pypi_0
-nvidia-cudnn-cu12=8.9.2.26=pypi_0
-nvidia-cufft-cu11=10.9.0.58=pypi_0
-nvidia-cufft-cu12=11.0.2.54=pypi_0
-nvidia-curand-cu11=10.3.0.86=pypi_0
-nvidia-curand-cu12=10.3.2.106=pypi_0
-nvidia-cusolver-cu11=11.4.1.48=pypi_0
-nvidia-cusolver-cu12=11.4.5.107=pypi_0
-nvidia-cusparse-cu11=11.7.5.86=pypi_0
-nvidia-cusparse-cu12=12.1.0.106=pypi_0
-nvidia-nccl-cu11=2.19.3=pypi_0
-nvidia-nccl-cu12=2.19.3=pypi_0
-nvidia-nvjitlink-cu12=12.4.99=pypi_0
-nvidia-nvtx-cu11=11.8.86=pypi_0
-nvidia-nvtx-cu12=12.1.105=pypi_0
-oauth2client=4.1.3=pypi_0
-oauthlib=3.2.2=pypi_0
-ogb=1.3.6=pyhd8ed1ab_0
-openjpeg=2.4.0=h3ad879b_0
-openssl=3.0.10=h7f8727e_2
-opt_einsum=3.3.0=pyhd3eb1b0_1
-osqp=0.6.3=pypi_0
-outdated=0.2.2=pypi_0
-packaging=23.0=pypi_0
-pandas=2.0.3=pypi_0
-pango=1.50.7=h05da053_0
-parallel-hashmap=1.33=hca92ed8_0
-partd=1.2.0=pyhd3eb1b0_1
-patsy=0.5.3=pypi_0
-pcre=8.45=h295c915_0
-pickle5=0.0.11=pypi_0
-pillow=9.4.0=pypi_0
-pip=23.2.1=pypi_0
-pixman=0.40.0=h7f8727e_1
-poppler=22.12.0=h381b16e_0
-poppler-data=0.4.11=h06a4308_1
-pretrainedmodels=0.7.4=pyhd8ed1ab_2
-prettytable=3.5.0=pypi_0
-protobuf=3.20.3=pypi_0
-psutil=5.9.0=pypi_0
-pyasn1=0.4.8=pyhd3eb1b0_0
-pyasn1-modules=0.2.8=py_0
-pybind11=2.11.1=pypi_0
-pycparser=2.21=pyhd3eb1b0_0
-pyg-lib=0.2.0=pypi_0
-pyjwt=2.4.0=pypi_0
-pyopenssl=23.2.0=pypi_0
-pyparsing=3.0.9=pypi_0
-pysocks=1.7.1=pypi_0
-python=3.10.12=h955ad1f_0
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-tzdata=2023.3=pyhd3eb1b0_0
-python-wget=3.2=py_0
-python_abi=3.10=2_cp310
-pythonwebhdfs=0.2.3=pypi_0
-pytorch=2.0.1=cpu_py310hdc00b08_0
-pytorch_geometric=2.3.1=pyhd8ed1ab_0
-pytorch_scatter=2.1.1=cpu_py310hf5a12b5_1
-pytz=2022.7=pypi_0
-pyu2f=0.1.5=pypi_0
-pywavelets=1.4.1=pypi_0
-pyyaml=6.0=pypi_0
-qdldl=0.1.7.post0=pypi_0
-qpth=0.0.16=pypi_0
-rdflib=7.0.0=pyhd8ed1ab_0
-re2=2022.04.01=h295c915_0
-readline=8.2=h5eee18b_0
-regex=2022.7.9=pypi_0
-requests=2.31.0=pypi_0
-requests-oauthlib=1.3.0=py_0
-responses=0.23.3=pypi_0
-retry-decorator=1.1.1=pypi_0
-rsa=4.7.2=pyhd3eb1b0_1
-safetensors=0.4.2=pypi_0
-schema=0.7.5=pypi_0
-scikit-image=0.20.0=pypi_0
-scikit-learn=1.3.0=pypi_0
-scipy=1.11.1=pypi_0
-scs=3.2.4=pypi_0
-seaborn=0.12.2=pypi_0
-sentencepiece=0.2.0=pypi_0
-setuptools=68.0.0=pypi_0
-simplejson=3.19.1=pypi_0
-six=1.16.0=pyhd3eb1b0_1
-snappy=1.1.9=h295c915_0
-soupsieve=2.4=pypi_0
-sqlite=3.41.2=h5eee18b_0
-statsmodels=0.14.0=pypi_0
-sympy=1.11.1=pypi_0
-tabulate=0.8.10=pypi_0
-tbb=2021.8.0=hdb19cb5_0
-tensorboard=2.12.1=pypi_0
-tensorboard-data-server=0.7.0=pypi_0
-tensorboard-plugin-wit=1.8.1=pypi_0
-tensorboardx=2.2=pyhd3eb1b0_0
-threadpoolctl=2.2.0=pyh0d69192_0
-tifffile=2021.7.2=pyhd3eb1b0_2
-tiktoken=0.6.0=pypi_0
-timm=0.9.5=pyhd8ed1ab_0
-tk=8.6.12=h1ccaba5_0
-tokenizers=0.15.2=pypi_0
-toolz=0.12.0=pypi_0
-torch=2.2.2+cu118=pypi_0
-torch-scatter=2.1.1=pypi_0
-torchaudio=2.2.2=pypi_0
-torchvision=0.17.2=pypi_0
-tqdm=4.65.0=pypi_0
-transformers=4.39.1=pypi_0
-transformers-stream-generator=0.0.5=pypi_0
-trimesh=3.23.3=pyhd8ed1ab_0
-triton=2.2.0=pypi_0
-typeguard=2.13.3=pypi_0
-types-pyyaml=6.0.12.11=pypi_0
-typing-extensions=4.10.0=pypi_0
-typing_extensions=4.7.1=py310h06a4308_0
-tzdata=2023c=h04d1e81_0
-urllib3=1.26.16=pypi_0
-wcwidth=0.2.5=pyhd3eb1b0_0
-websockets=11.0.3=pypi_0
-werkzeug=2.2.3=pypi_0
-wheel=0.38.4=pypi_0
-wilds=2.0.0=pyhd8ed1ab_0
-xz=5.4.2=h5eee18b_0
-yaml=0.2.5=h7b6447c_0
-yarl=1.8.1=pypi_0
-zfp=0.5.5=h295c915_6
-zipp=3.11.0=pypi_0
-zlib=1.2.13=h5eee18b_0
-zstd=1.5.5=hc292b87_0
+absl-py==1.4.0
+accelerate==0.28.0
+aiohttp==3.8.3
+aiosignal==1.2.0
+argcomplete==3.1.6
+ase==3.22.1
+astor==0.8.1
+async-timeout==4.0.2
+attrs==22.1.0
+beautifulsoup4==4.12.2
+bitsandbytes==0.42.0
+blinker==1.4
+boto==2.49.0
+Bottleneck==1.3.5
+brotlipy==0.7.0
+cachetools==4.2.2
+captum==0.6.0
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==2.0.4
+clarabel==0.6.0
+click==8.0.4
+cloudpickle==2.2.1
+cmake==3.27.2
+colorama==0.4.6
+contextlib2==21.6.0
+contourpy==1.0.5
+crcmod==1.7
+cryptography==41.0.2
+cvxpy==1.4.1
+cycler==0.11.0
+cytoolz==0.12.0
+dask==2023.6.0
+docker-pycreds==0.4.0
+ecos==2.0.12
+einops==0.7.0
+fasteners==0.19
+fastprogress==1.0.3
+filelock==3.9.0
+Flask==2.2.2
+fonttools==4.25.0
+frozenlist==1.3.3
+fsspec==2024.3.1
+ftfy==5.8
+gcs-oauth2-boto-plugin==3.0
+gdown==4.7.1
+gitdb==4.0.11
+GitPython==3.1.43
+gmpy2==2.1.2
+google-apitools==0.5.32
+google-auth==2.6.0
+google-auth-oauthlib==0.5.2
+google-reauth==0.1.1
+grpcio==1.48.2
+gsutil==5.27
+gym==0.26.2
+gym-notices==0.0.8
+h5py==3.9.0
+httplib2==0.20.4
+huggingface-hub==0.22.1
+idna==3.4
+imagecodecs==2021.8.26
+imageio==2.31.1
+importlib-metadata==6.0.0
+isodate==0.6.1
+itsdangerous==2.0.1
+Jinja2==3.1.2
+joblib==1.2.0
+json-tricks==3.17.3
+kiwisolver==1.4.4
+lazy_loader==0.2
+learn2learn==0.2.0
+lit==16.0.6
+littleutils==0.2.2
+llvmlite==0.40.0
+locket==1.0.0
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.7.1
+mkl-fft==1.3.6
+mkl-random==1.2.2
+mkl-service==2.4.0
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.0.2
+munch==2.5.0
+munkres==1.1.4
+networkx==3.1
+nni==2.10.1
+numba==0.57.1
+numexpr==2.8.4
+numpy==1.24.3
+nvidia-cublas-cu11==11.11.3.6
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu11==11.8.87
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu11==11.8.89
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu11==11.8.89
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu11==8.7.0.84
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu11==10.9.0.58
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu11==10.3.0.86
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu11==11.4.1.48
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu11==11.7.5.86
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu11==2.19.3
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.99
+nvidia-nvtx-cu11==11.8.86
+nvidia-nvtx-cu12==12.1.105
+oauth2client==4.1.3
+oauthlib==3.2.2
+ogb==1.3.6
+opt-einsum==3.3.0
+osqp==0.6.3
+outdated==0.2.2
+packaging==23.0
+pandas==2.0.3
+partd==1.2.0
+patsy==0.5.3
+pickle5==0.0.11
+Pillow==9.4.0
+pip==23.2.1
+platformdirs==4.2.2
+pretrainedmodels==0.7.4
+prettytable==3.5.0
+protobuf==3.20.3
+psutil==5.9.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pybind11==2.11.1
+pycparser==2.21
+pyg-lib==0.2.0
+PyJWT==2.4.0
+pyOpenSSL==23.2.0
+pyparsing==3.0.9
+PySocks==1.7.1
+python-dateutil==2.8.2
+PythonWebHDFS==0.2.3
+pytz==2022.7
+pyu2f==0.1.5
+PyWavelets==1.4.1
+PyYAML==6.0
+qdldl==0.1.7.post0
+qpth==0.0.16
+rdflib==7.0.0
+regex==2022.7.9
+requests==2.31.0
+requests-oauthlib==1.3.0
+responses==0.23.3
+retry-decorator==1.1.1
+rsa==4.7.2
+safetensors==0.4.2
+schema==0.7.5
+scikit-image==0.20.0
+scikit-learn==1.3.0
+scipy==1.11.1
+scs==3.2.4
+seaborn==0.12.2
+sentencepiece==0.2.0
+sentry-sdk==2.11.0
+setproctitle==1.3.3
+setuptools==68.0.0
+simplejson==3.19.1
+six==1.16.0
+smmap==5.0.1
+soupsieve==2.4
+statsmodels==0.14.0
+sympy==1.11.1
+tabulate==0.8.10
+tensorboard==2.12.1
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorboardX==2.2
+threadpoolctl==2.2.0
+tifffile==2021.7.2
+tiktoken==0.6.0
+timm==0.9.5
+tokenizers==0.15.2
+toolz==0.12.0
+torch==2.2.2+cu118
+torch-geometric==2.3.1
+torch-scatter==2.1.1
+torchaudio==2.2.2
+torchvision==0.17.2
+tqdm==4.65.0
+transformers==4.39.1
+transformers-stream-generator==0.0.5
+trimesh==3.23.3
+triton==2.2.0
+typeguard==2.13.3
+types-PyYAML==6.0.12.11
+typing_extensions==4.10.0
+tzdata==2023.3
+urllib3==1.26.16
+wandb==0.17.5
+wcwidth==0.2.5
+websockets==11.0.3
+Werkzeug==2.2.3
+wget==3.2
+wheel==0.38.4
+wilds==2.0.0
+yarl==1.8.1
+zipp==3.11.0
